# bvestl-fs

./: .build-py  .clang-format  CMakeLists.txt  README.md  build.py
include/bvestl/fs/: allocation.hpp  fwd.hpp  path.hpp  resolver.hpp
include/bvestl/fs/internal/: string.hpp  vector.hpp
include/fs/: allocation.hpp  fwd.hpp  path.hpp  resolver.hpp
include/fs/internal/: string.hpp  vector.hpp
src/: allocation.cpp  path.cpp  resolver.cpp
tests/: path_demo.cpp
tools/ci/: appveyor.yml  gitlab-ci.yml
tools/vcpkg/: setup.py
